2010-01-12  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder.c
	(tny_camel_folder_refresh_default): added missing
	tny_camel_folder_reason/unreason to the refresh operation. Summary
	was sometimes freed to early when this operation was ongoing
	causing crashes.

2010-01-10  Philip Van Hoof  <philip@codeminded.be>
	Patch by Mike Vee (mike@vee.net)

	* Updated Vala bindings

2010-01-09  Sergio Villar Senin  <svillar@igalia.com>

	* camel/providers/imap/camel-imap-store.h: do not enable IDLE
	debug if IDLE was disabled in configure stage

2010-01-07  Jose Dapena Paz  <jdapena@igalia.com>

	* Added support for user flags in specific tinymail and camel
	backends. Default implementation does not provide any support
	but API allows to access user flags in specific backends.

2010-01-05  Sergio Villar Senin  <svillar@igalia.com>

	* tests/c-demo/tny-demoui-summary-view.c
	(on_rename_folder_activate):
	(on_create_folder_activate): removed unused variables

	* libtinymail-camel/tny-camel-bs-mime-part.c: added two missing
	includes

	* libtinymail-camel/tny-camel-queue.c: added a missing include

	* libtinymail-camel/tny-camel-send-queue.c
	(tny_camel_send_queue_add_async_default): removed unused variable

	* libtinymail-camel/tny-camel-folder.c
	(_tny_camel_folder_set_allow_external_images):
	(tny_camel_folder_copy_async_default): removed unused variable

	* libtinymail-camel/tny-camel-common.c: added a missing include

	* camel/providers/local/camel-maildir-folder.c
	(maildir_transfer_messages_to): removed unused variable
	(camel_maildir_folder_class_init): redefined a method

	* camel/providers/pop3/camel-pop3-folder.c (pop3_sync): removed
	unused code
	(pop3_sync): removed unused variables
	(pop3_set_allow_external_images): removed unused variable

	* camel/camel-url.c: added missing include

	* camel/camel-mime-utils.c (fix_broken_rfc2047): removed unused variable

	* camel/camel-data-cache.c (camel_data_cache_delete_attachments):