@@ -1,3 +1,11 @@
+2010-01-13  Jose Dapena Paz  <jdapena@igalia.com>
+
+	* libtinymail-camel/tny-camel-bs-msg-receive-strategy.c
+	(retrieve_subparts_headers): workaround for Gmail. If we are
+	accessing a TnyMsg, and it does not have id.HEADER part, then
+	we have the Gmail issue where some message/rfc822 parts will
+	have their body as a subpart instead of being id.TEXT part.
+
 2010-01-12  Sergio Villar Senin  <svillar@igalia.com>
 
 	* libtinymail-camel/tny-camel-folder.c
